--- a/Bmsit Mca/National agrifunds Hackathon/nbproject/project.properties
+++ b/Bmsit Mca/National agrifunds Hackathon/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=National_agrifunds_Hackathon
-main.class=national.agrifunds.hackathon.NationalAgrifundsHackathon
+main.class=national.agrifunds.hackathon.UI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
