Overhaul the main UI

--- a/Bmsit-Mca/app/src/main/AndroidManifest.xml
+++ b/Bmsit-Mca/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".BankingActivity"/>
+        <activity android:name=".GovtActivity"/>
+        <activity android:name=".PensionActivity"/>
     </application>
 
 </manifest>
